@@ -1,3 +1,5 @@
+* Improve search_rec_name of category to take care of separator
+
 Version 1.4.0 - 2009-10-19
 * Bug fixes (see mercurial logs for details)
 
